# fpl-dataset-builder

./: .gitignore  .mcp.json  CLAUDE.md  DATA_ARCHITECTURE_PLAN.md  GAMEWEEK_IMPLEMENTATION.md  README.md  REFACTORING_PLAN.md  alembic.ini  backfill_all_derived.py  backfill_gameweeks.py  backfill_snapshots_vaastav.py  client_test_results_20250824_231404.json  db_integration.py  main.py  migrate_ownership_trends.py  models.py  pyproject.toml  team_picker_integration_example.py  utils.py  validation_results_20250824_231357.json
alembic/: env.py
cli/: __init__.py  helpers.py
client/: __init__.py  fpl_data_client.py
data/: DATASET.md  fpl_player_xg_xa_rates.csv  fpl_raw_bootstrap.json  injury_tracking_template.csv  match_results_previous_season.csv
db/: __init__.py  database.py  models.py  models_derived.py  models_raw.py  operations.py
docs/: BETTING_ODDS_INTEGRATION.md  DATA_SOURCES.md  GAMEWEEK_WORKFLOW.md  NEW_PLAYER_HANDLING.md  PHASE5_MIGRATION_TESTING.md  REALTIME_ODDS_INTEGRATION.md
fetchers/: __init__.py  derived_processor.py  external.py  fpl_api.py  live_data.py  my_manager.py  normalization.py  raw_processor.py  utils.py  vaastav.py
migrations/: __init__.py  manager.py
safety/: __init__.py  backup.py  change_detector.py  cli.py  integrity.py
scripts/: README.md  __init__.py  backfill_chip_data.py  capture_chip_usage.py  fix_vaastav_data.py
tests/: README.md  __init__.py  conftest.py  data_integrity.py  test_betting_odds.py  test_chip_usage.py  test_client_library.py  test_data_quality.py  test_database.py  test_derived_betting.py  test_derived_new_features.py  (+4 more)
(+37 files in other folders)
