[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fpl-dataset-builder"
version = "0.1.0"
description = "A minimal FPL dataset builder for fantasy football modeling"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "pandera==0.25.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.8.0",
    "fpl-mcp>=0.1.6",
]

[tool.hatch.build.targets.wheel]
packages = ["client", "db", "fetchers", "safety", "validation"]

[project.optional-dependencies]
fbref = ["soccerdata>=1.4.0"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["fpl_dataset_builder"]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
    "pre-commit>=3.5.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*", "*Tests", "*TestSuite"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
